--- a/project.css
+++ b/project.css
@@ -1,12 +1,106 @@
-/* input[type="file"]::file-selector-button {
-    border: 2px solid #6c5ce7;
-    padding: 0.2em 0.4em;
-    border-radius: 0.2em;
-    background-color: #a29bfe;
-    cursor: pointer;
+@font-face {
+  font-family: opendyslexic;
+  src: url("./OpenDyslexic.otf");
+}
 
-  } */
 #uploadedfile {
   display: none;
   overflow: hidden;
+}
+
+* {
+  font-family: opendyslexic;
+  background-color: #ddc6c6;
+  color: #2C3863;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+
+header{
+  width: 100%;
+  height: 50px;
+  background-color: #f8f8f8;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.Logo {
+  color: rgb(44, 44, 44);
+  font-size: 1.5em;
+}
+
+nav{
+  display: flex;
+  align-items: center;
+}
+nav ol{
+  display: flex;
+  list-style: none;
+}
+
+.btn{
+  position: relative;
+  width: 25px;
+  height: 25px;
+  -webkit-appearance: none;
+  appearance: none;
+  cursor: pointer;
+  display: none;
+}
+
+.btn::before{
+  content: '\f0c9';
+  position: absolute;
+  top:0;
+  left:0;
+  font-weight: 700;
+  font-size: 2em;
+}
+
+nav ol li{
+  margin: 1em;
+}
+
+nav ol li a{
+  text-decoration: none;
+  padding: 0.2em 1.2em 0.9em 1.2em;
+  border-radius: 10px 10px 0 0;
+  color: rgb(39,39,39);
+  transition: all .4s;
+  position: relative;
+  z-index: 1;
+}
+
+nav ol li a::before{
+  content:'';
+  position: absolute;
+  bottom:0;
+  left:0;
+  width: 100%;
+  height: 41px;
+  border-radius: 10px 10px 0 0;
+  transform-origin: bottom;
+  background: #853333;
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  transform: scaleY(0.05);
+  z-index: -1;
+  transition: all .4s;
+
+}
+
+nav ol li a:hover::before{ transform: scaleY(1.1);}
+nav ol li a:hover{ color:white;}
+
+.border {
+  border-style:solid;
+  border-top-left-radius: 4px 2px;
+  border-top-right-radius: 3px 4px;
+  border-bottom-right-radius: 6px 2px;
+  border-bottom-left-radius: 3px 4px;
+  border-color: white;
+  width: fit-content;
+  background-color: white;
 }
